--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,6 @@ spring.datasource.username=root
 spring.datasource.password=123
 # 应用服务 WEB 访问端口
 server.port=8080
+logging.level.com.mapper=debug
 
 
